[gd_scene load_steps=62 format=2]

[ext_resource path="res://assets/Karakter/karakter 2/walk (2).png" type="Texture" id=1]
[ext_resource path="res://assets/Karakter/karakter 2/walk (5).png" type="Texture" id=2]
[ext_resource path="res://assets/Karakter/karakter 2/walk (6).png" type="Texture" id=3]
[ext_resource path="res://assets/Karakter/karakter 2/walk (7).png" type="Texture" id=4]
[ext_resource path="res://assets/Karakter/karakter 2/walk (8).png" type="Texture" id=5]
[ext_resource path="res://assets/Karakter/karakter 2/walk (4).png" type="Texture" id=6]
[ext_resource path="res://assets/Karakter/karakter 2/walk (3).png" type="Texture" id=7]
[ext_resource path="res://assets/Karakter/karakter 2/walk (1).png" type="Texture" id=8]
[ext_resource path="res://assets/Karakter/karakter 2/idle.png" type="Texture" id=9]
[ext_resource path="res://Karakter/musuh.gd" type="Script" id=10]
[ext_resource path="res://assets/Karakter/karakter 2/shoot (2).png" type="Texture" id=11]
[ext_resource path="res://assets/Karakter/karakter 2/shoot (1).png" type="Texture" id=12]
[ext_resource path="res://assets/Karakter/karakter 2/shoot (3).png" type="Texture" id=13]
[ext_resource path="res://assets/Karakter/karakter 2/shoot (4).png" type="Texture" id=14]
[ext_resource path="res://assets/Karakter/karakter 2/shoot (5).png" type="Texture" id=15]
[ext_resource path="res://assets/Karakter/karakter 2/die (4).png" type="Texture" id=16]
[ext_resource path="res://assets/Karakter/karakter 2/die (2).png" type="Texture" id=17]
[ext_resource path="res://assets/Karakter/karakter 2/die (5).png" type="Texture" id=18]
[ext_resource path="res://assets/Karakter/karakter 2/die (3).png" type="Texture" id=19]
[ext_resource path="res://assets/Karakter/karakter 2/die (1).png" type="Texture" id=20]
[ext_resource path="res://Karakter/Enemy/Bullet.gd" type="Script" id=21]
[ext_resource path="res://UI/EnemyBar/EnemyBar.tscn" type="PackedScene" id=22]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_green_walk_with_gun_009.png" type="Texture" id=23]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_green_walk_with_gun_014.png" type="Texture" id=24]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_green_walk_with_gun_015.png" type="Texture" id=25]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_green_walk_with_gun_010.png" type="Texture" id=26]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_green_walk_with_gun_011.png" type="Texture" id=27]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_green_walk_with_gun_008.png" type="Texture" id=28]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_green_walk_with_gun_006.png" type="Texture" id=29]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_green_walk_with_gun_007.png" type="Texture" id=30]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_green_walk_with_gun_012.png" type="Texture" id=31]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_green_walk_with_gun_013.png" type="Texture" id=32]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_green_walk_with_gun_003.png" type="Texture" id=33]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_green_walk_with_gun_002.png" type="Texture" id=34]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_green_walk_with_gun_004.png" type="Texture" id=35]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_green_walk_with_gun_005.png" type="Texture" id=36]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_green_walk_with_gun_001.png" type="Texture" id=37]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_green_walk_with_gun_000.png" type="Texture" id=38]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_green_shoot_000.png" type="Texture" id=39]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_green_shoot_001.png" type="Texture" id=40]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_green_shoot_002.png" type="Texture" id=41]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_green_shoot_003.png" type="Texture" id=42]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_green_shoot_004.png" type="Texture" id=43]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_green_shoot_005.png" type="Texture" id=44]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_green_shoot_007.png" type="Texture" id=45]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_green_shoot_006.png" type="Texture" id=46]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_green_shoot_008.png" type="Texture" id=47]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_green_shoot_009.png" type="Texture" id=48]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_green_die_000.png" type="Texture" id=49]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_green_die_001.png" type="Texture" id=50]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_green_die_004.png" type="Texture" id=51]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_green_die_002.png" type="Texture" id=52]
[ext_resource path="res://assets/Karakter/enemy/keyframes/__virus_monster_02_green_die_003.png" type="Texture" id=53]
[ext_resource path="res://assets/Karakter/idle.png" type="Texture" id=54]
[ext_resource path="res://assets/Karakter/covid.png" type="Texture" id=55]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 46 ), ExtResource( 45 ), ExtResource( 47 ), ExtResource( 48 ) ],
"loop": true,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 49 ), ExtResource( 50 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 51 ) ],
"loop": true,
"name": "Dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 38 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 37 ), ExtResource( 34 ), ExtResource( 33 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 28 ), ExtResource( 23 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 24 ), ExtResource( 25 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 1 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "Walking",
"speed": 5.0
}, {
"frames": [ ExtResource( 55 ) ],
"loop": true,
"name": "covid_shoot",
"speed": 5.0
}, {
"frames": [ ExtResource( 54 ) ],
"loop": true,
"name": "covid_walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 17 ), ExtResource( 19 ), ExtResource( 16 ), ExtResource( 18 ) ],
"loop": true,
"name": "deatr",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "idleee",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "serang",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 103.372, 220.322 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 466.709, 46.2627 )

[sub_resource type="Animation" id=5]
resource_name = "HitAnim"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.00392157, 0.00392157, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "jump"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.4, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -10 ), Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 247.042, 46.6667 )

[node name="musuh" type="KinematicBody2D"]
scale = Vector2( 0.15, 0.15 )
collision_layer = 8
script = ExtResource( 10 )
__meta__ = {
"_edit_horizontal_guides_": [ 36.0 ]
}

[node name="FloorDetectorRight" type="RayCast2D" parent="."]
position = Vector2( 300, 0 )
scale = Vector2( 1, 1.247 )
enabled = true
cast_to = Vector2( 0, 155 )

[node name="FloorDetectorLeft" type="RayCast2D" parent="."]
position = Vector2( -86.6667, 0 )
scale = Vector2( 1, 1.247 )
enabled = true
cast_to = Vector2( 0, 155 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 1, 0.00392157, 0.00392157, 1 )
position = Vector2( 121.951, -52.0833 )
frames = SubResource( 1 )
animation = "covid_shoot"
playing = true
flip_h = true

[node name="Bullet" type="Position2D" parent="AnimatedSprite"]
position = Vector2( -295.284, 72.0834 )
script = ExtResource( 21 )

[node name="Cooldown" type="Timer" parent="AnimatedSprite/Bullet"]
wait_time = 1.2
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 23.3715, -40.3217 )
shape = SubResource( 4 )

[node name="AreaAttack" type="Area2D" parent="."]
position = Vector2( 118.721, 42.1941 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaAttack"]
modulate = Color( 0.27451, 0.054902, 0.972549, 1 )
position = Vector2( -465, -22 )
shape = SubResource( 3 )

[node name="TimerAnimation" type="Timer" parent="."]
one_shot = true

[node name="EnemyHealth" parent="." instance=ExtResource( 22 )]
margin_left = -40.0
margin_top = -353.333
margin_right = 233.0
margin_bottom = -323.333

[node name="enemy_Sound" type="AudioStreamPlayer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/HitAnim = SubResource( 5 )
anims/jump = SubResource( 9 )

[node name="SpawnTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.287
one_shot = true

[node name="AreaBlind" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaBlind"]
modulate = Color( 0.0431373, 1, 0.686275, 1 )
position = Vector2( 246, 20 )
shape = SubResource( 6 )

[connection signal="body_entered" from="AreaAttack" to="." method="_on_AreaAttack_body_entered"]
[connection signal="body_exited" from="AreaAttack" to="." method="_on_AreaAttack_body_exited"]
[connection signal="body_entered" from="AreaBlind" to="." method="_on_AreaBlind_body_entered"]
[connection signal="body_exited" from="AreaBlind" to="." method="_on_AreaBlind_body_exited"]
